--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "check-node-version": "^2.1.0",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.3",
+    "node-fetch": "^1.7.1",
     "pg": "^6.4.0",
     "sequelize": "^4.3.1"
   }
