--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.3",
     "node-fetch": "^1.7.1",
     "pg": "^6.4.0",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "valid-url": "^1.0.9"
   }
 }
