--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.2",
     "check-node-version": "^2.1.0",
     "cheerio": "^1.0.0-rc.2",
+    "chron": "0.0.4",
     "express": "^4.15.3",
     "node-fetch": "^1.7.1",
     "pg": "^6.4.0",
