--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chron": "0.0.4",
     "express": "^4.15.3",
     "node-fetch": "^1.7.1",
+    "nodemon": "^1.11.0",
     "pg": "^6.4.0",
     "sequelize": "^4.3.1",
     "valid-url": "^1.0.9"
